// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTimeline is rendered with items 1`] = `
<ol
  class="euiTimeline emotion-euiTimeline-xl"
  role="list"
>
  <li
    class="emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label="email"
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title="email"
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="email"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
  <li
    class="emotion-euiTimelineItem-top"
  >
    <div
      class="emotion-euiTimelineItemIcon-top"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="bolt"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-top"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
</ol>
`;

exports[`EuiTimeline props gutterSize l is rendered 1`] = `
<ol
  class="euiTimeline emotion-euiTimeline-l"
  role="list"
>
  <li
    class="emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label="email"
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title="email"
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="email"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
  <li
    class="emotion-euiTimelineItem-top"
  >
    <div
      class="emotion-euiTimelineItemIcon-top"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="bolt"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-top"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
</ol>
`;

exports[`EuiTimeline props gutterSize m is rendered 1`] = `
<ol
  class="euiTimeline emotion-euiTimeline-m"
  role="list"
>
  <li
    class="emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label="email"
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title="email"
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="email"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
  <li
    class="emotion-euiTimelineItem-top"
  >
    <div
      class="emotion-euiTimelineItemIcon-top"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="bolt"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-top"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
</ol>
`;

exports[`EuiTimeline props gutterSize xl is rendered 1`] = `
<ol
  class="euiTimeline emotion-euiTimeline-xl"
  role="list"
>
  <li
    class="emotion-euiTimelineItem-center"
  >
    <div
      class="emotion-euiTimelineItemIcon-center"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label="email"
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title="email"
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="email"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-center"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
  <li
    class="emotion-euiTimelineItem-top"
  >
    <div
      class="emotion-euiTimelineItemIcon-top"
    >
      <div
        class="emotion-euiTimelineItemIcon__content"
      >
        <div
          aria-label=""
          class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
          role="img"
          title=""
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="bolt"
          />
        </div>
      </div>
    </div>
    <div
      class="emotion-euiTimelineItemEvent-top"
    >
      <p>
        <strong>
          janet@elastic.co
        </strong>
         was invited to the project
      </p>
    </div>
  </li>
</ol>
`;
